# TinyML-for-Air-Quality-Monitoring

./: .env.example  .gitignore  air_quality_model.h5  best_air_quality_model.h5  feature_columns.pkl  label_encoder.pkl  openaq_api.json  openaq_aqi_dataset.csv  preprocessing_info.pkl  processing.py  requirements.txt  scaler.pkl  tinyml.py  training.py
datasets/: openaq_aqi_dataset.csv
esp32-firmware/: Dockerfile.tflm-esp32s3  usage.md
esp32-firmware/esp32-tflm-test/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.old
esp32-firmware/esp32-tflm-test/components/tflite-lib/: CMakeLists.txt  CMakeLists1.txt
esp32-firmware/esp32-tflm-test/main/: CMakeLists.txt  main.cpp  model_data.cpp  model_data.h
esp32_firmware/: Makefile  tflite_test.cpp
python_model/: evaluator.py  processing.py  training.py
python_model/model/: air_quality_model.h  air_quality_model.h5  air_quality_model.tflite  best_air_quality_model.h5
